deployment/route/route.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: route-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-route-clusterip
                port:
                  number: 7070

---

apiVersion: v1
kind: Service
metadata:
  name: service-route-clusterip
spec:
  type: ClusterIP
  selector:
    app: route
  ports:
    - port: 7070
      targetPort: 7070


---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: route-deployment
spec:
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  replicas: 1
  selector:
    matchLabels:
      app: route
  template:
    metadata:
      labels:
        app: route
    spec:
      containers:
        - image: guptang/tiktok-route:v6
          name: tiktok-route-container
